--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/insertBatchReport.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/insertBatchReport.html
@@ -66,18 +66,18 @@
 
 					</dd>
 				</dl>
-				<dl  >
-					<dt>车辆领域</dt>
-					<dd>
-						<select class="form-control" name="csvDomain"  >
-							<option></option>
-							<option value="2">公共领域</option>
-							<option value="1">个人领域</option>
-							<option value="0">未知</option>
-						</select>
+				<!--<dl  >-->
+					<!--<dt>车辆领域</dt>-->
+					<!--<dd>-->
+						<!--<select class="form-control" name="csvDomain"  >-->
+							<!--<option></option>-->
+							<!--<option value="2">公共领域</option>-->
+							<!--<option value="1">个人领域</option>-->
+							<!--<option value="0">未知</option>-->
+						<!--</select>-->
 
-					</dd>
-				</dl>
+					<!--</dd>-->
+				<!--</dl>-->
 
 				<dl  >
 					<dt>状态</dt>
