修复了一个翻页最大页面的bug

--- a/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
@@ -259,8 +259,10 @@
 			  url:getServUrl("/admin/machine/list"),
 			  cols:  [clms],
 			  done: function(res, curr, count){
+                  if(curr>res.page.total)
+                      curr = res.page.total;
                   currPage = curr;
-                  currSize=res.page.size;
+                  currSize = res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
