--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
@@ -221,8 +221,10 @@
     url: getServUrl("/monitor/analysis/quota/list"),
     cols: [clms],
     done: function (res, curr, count) {
-      currPage = curr;
-      currSize = res.page.size;
+        if(curr>res.page.total)
+            curr = res.page.total;
+        currPage = curr;
+        currSize = res.page.size;
     },
     response: {
       statusName: "code",
