--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
@@ -247,8 +247,10 @@
 			  url:getServUrl("/admin/vehicle/list"),
 			  cols:  [clms],
 			  done: function(res, curr, count){
+                  if(curr>res.page.total)
+                      curr = res.page.total;
                   currPage = curr;
-                  currSize=res.page.size;
+                  currSize = res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
