--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyCan/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyCan/index_list2.html
@@ -179,8 +179,10 @@
 			  cols:  [clms],
 			  done: function(res, curr, count){
 
+                  if(curr>res.page.total)
+                      curr = res.page.total;
                   currPage = curr;
-                  currSize=res.page.size;
+                  currSize = res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
