--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -306,8 +306,13 @@
 			  cols:  [clms],
 			  done: function(res, curr, count){
 			    		console.log(curr);
-          		currPage = curr;
-                  currSize=res.page.size;
+          		//currPage = curr;
+                  //currSize=res.page.size;
+
+                  if(curr>res.page.total)
+                      curr = res.page.total;
+                  currPage = curr;
+                  currSize = res.page.size;
 						},
       	  	  response: {
 	      		  statusName: "code",
