--- a/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
@@ -212,6 +212,8 @@
         url: getServUrl("/monitor/statistics/list"),
         cols: [clms],
         done: function (res, curr, count) {
+            if(curr>res.page.total)
+                curr = res.page.total;
             currPage = curr;
             currSize = res.page.size;
         },
