--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -55,6 +55,9 @@
                         <li>
                             <a class="J_menuItem" href="monitor/historyRemote/index.html">远程控制记录</a>
                         </li>
+                        <li>
+                            <a class="J_menuItem" href="monitor/expVehicle/index.html">异常数据记录</a>
+                        </li>
                     </ul>
                 </li>-->
             </ul>
