修复查询失效的bug

--- a/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_query.html
@@ -15,7 +15,7 @@
 <dl cond="vin" >
 				<dt>VIN</dt>
 				<dd  >
-					<input  name="vinEquals" placeholder="" class="form-control" >
+					<input  name="vin" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="timeText" style="display:none;">
