车辆异常数据巡检

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_query.html
@@ -6,116 +6,117 @@
 <body>
 	<form class="form-horizontal queryform">
 		<div class="form-group">
-<dl cond="CsvExpId" style="display:none;">
+<dl cond="csvExpId" style="display:none;">
 				<dt>编号：</dt>
 				<dd  >
-					<input  name="CsvExpIdEquals" placeholder="请输入数字" class="form-control" >
+					<input  name="csvExpId" placeholder="请输入数字" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvCarNo" style="display:none;">
+<dl cond="csvCarNo">
 				<dt>车牌号：</dt>
 				<dd  >
-					<input  name="CsvCarNoEquals" placeholder="" class="form-control" >
+					<input  name="csvCarNo" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvVin" style="display:none;">
+<dl cond="csvVin">
 				<dt>车架号：</dt>
 				<dd  >
-					<input  name="CsvVinEquals" placeholder="" class="form-control" >
+					<input  name="csvVin" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvEngineNo" style="display:none;">
+<dl cond="csvEngineNo">
 				<dt>发动机号：</dt>
 				<dd  >
-					<input  name="CsvEngineNoEquals" placeholder="" class="form-control" >
+					<input  name="csvEngineNo" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvBataccuCode" style="display:none;">
+<dl cond="csvBataccuCode" style="display:none;">
 				<dt>可充电储能系统编码：</dt>
 				<dd  >
-					<input  name="CsvBataccuCodeEquals" placeholder="" class="form-control" >
+					<input  name="csvBataccuCode" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvProdDate" style="display:none;">
+<dl cond="csvProdDate" style="display:none;">
 				<dt>出厂日期：</dt>
 				<dd  >
-					<input  name="CsvProdDateEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({format: 'YYYY-MM-DD'})">
+					<input  name="csvProdDate" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({format: 'YYYY-MM-DD'})">
 				</dd>
 			</dl>
-<dl cond="CsvModelCodeFull" style="display:none;">
+<dl cond="csvModelCodeFull" style="display:none;">
 				<dt>车型代码：</dt>
 				<dd  >
-					<input  name="CsvModelCodeFullEquals" placeholder="" class="form-control" >
+					<input  name="csvModelCodeFull" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvModelCodeSimple" style="display:none;">
+<dl cond="csvModelCodeSimple" style="display:none;">
 				<dt>车型备案型号：</dt>
 				<dd  >
-					<input  name="CsvModelCodeSimpleEquals" placeholder="" class="form-control" >
+					<input  name="csvModelCodeSimple" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeType" style="display:none;">
-				<dt>终端类型:0:车厘子,1:中导,2:慧翰,3:通领：</dt>
+<dl cond="csmTeType" style="display:none;">
+				<dt>终端类型：</dt>
 				<dd  >
-					<input  name="CsmTeTypeEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere="csm_te_type"  dataUrl="/base/dict/query">
+					<input  name="csmTeType" placeholder="请输入关键字" class="form-control searchinput"  dataWhere="csm_te_type"  dataUrl="/base/dict/query">
 				</dd>
 			</dl>
-<dl cond="CsmNumber" style="display:none;">
+<dl cond="csmNumber" style="display:none;">
 				<dt>车机号：</dt>
 				<dd  >
-					<input  name="CsmNumberLike" placeholder="" class="form-control" >
+					<input  name="csmNumberLike" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeNo" style="display:none;">
+<dl cond="csmTeNo">
 				<dt>终端编号：</dt>
 				<dd  >
-					<input  name="CsmTeNoEquals" placeholder="" class="form-control" >
+					<input  name="csmTeNoEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeModel" style="display:none;">
+<dl cond="csmTeModel" style="display:none;">
 				<dt>终端型号：</dt>
 				<dd  >
-					<input  name="CsmTeModelEquals" placeholder="" class="form-control" >
+					<input  name="csmTeModelEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeCode" style="display:none;">
+<dl cond="csmTeCode" style="display:none;">
 				<dt>厂商代码：</dt>
 				<dd  >
-					<input  name="CsmTeCodeEquals" placeholder="" class="form-control" >
+					<input  name="csmTeCodeEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeLotNo" style="display:none;">
+<dl cond="csmTeLotNo" style="display:none;">
 				<dt>终端批号：</dt>
 				<dd  >
-					<input  name="CsmTeLotNoEquals" placeholder="" class="form-control" >
+					<input  name="csmTeLotNoEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmTeSerial" style="display:none;">
+<dl cond="csmTeSerial" style="display:none;">
 				<dt>终端流水：</dt>
 				<dd  >
-					<input  name="CsmTeSerialEquals" placeholder="" class="form-control" >
+					<input  name="csmTeSerialEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmMobile" style="display:none;">
+<dl cond="csmMobile" style="display:none;">
 				<dt>手机号码：</dt>
 				<dd  >
-					<input  name="CsmMobileEquals" placeholder="" class="form-control" >
+					<input  name="csmMobile" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsmIccid" style="display:none;">
+			<dl cond="csvAddTime">
+				<dt>添加时间：</dt>
+				<dd class="timergroup" >
+					<input  name="startTime"  placeholder="开始时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+					<label class="timegrouplabel">-</label>
+					<input  name="endTime" placeholder="结束时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+				</dd>
+			</dl>
+<dl cond="csmIccid">
 				<dt>ICCID：</dt>
 				<dd  >
-					<input  name="CsmIccidEquals" placeholder="" class="form-control" >
+					<input  name="csmIccid" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="CsvAddTime" style="display:none;">
-				<dt>车辆添加时间：</dt>
-				<dd class="timergroup" >
-					<input  name="CsvAddTimeStart"  placeholder="开始时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                    <label class="timegrouplabel">-</label>
-                    <input  name="CsvAddTimeEnd" placeholder="结束时间" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-				</dd>
-			</dl>
+
 			<div class="querybtns">
 				<button class="btn btn-success " type="button" onclick="operate.query();"><i class="glyphicon fa fa-search"></i>查询</button>
 				<button class="btn btn-primary" type="button" resetForm><i class="glyphicon fa fa-reply"></i>清空</button>
@@ -125,24 +126,24 @@
 				 		<span class="caret"></span>
 				 	</button>
 					<ul class="dropdown-menu tableMenu conditionMenu" role="menu">
-			        <li><label><input cond="CsvExpId" value="CsvExpId"  type="checkbox" onclick='showHideCondition(this, this.value);' >编号</label></li>
-			        <li><label><input cond="CsvCarNo" value="CsvCarNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >车牌号</label></li>
-			        <li><label><input cond="CsvVin" value="CsvVin"  type="checkbox" onclick='showHideCondition(this, this.value);' >车架号</label></li>
-			        <li><label><input cond="CsvEngineNo" value="CsvEngineNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >发动机号</label></li>
-			        <li><label><input cond="CsvBataccuCode" value="CsvBataccuCode"  type="checkbox" onclick='showHideCondition(this, this.value);' >可充电储能系统编码</label></li>
-			        <li><label><input cond="CsvProdDate" value="CsvProdDate"  type="checkbox" onclick='showHideCondition(this, this.value);' >出厂日期</label></li>
-			        <li><label><input cond="CsvModelCodeFull" value="CsvModelCodeFull"  type="checkbox" onclick='showHideCondition(this, this.value);' >车型代码</label></li>
-			        <li><label><input cond="CsvModelCodeSimple" value="CsvModelCodeSimple"  type="checkbox" onclick='showHideCondition(this, this.value);' >车型备案型号</label></li>
-			        <li><label><input cond="CsmTeType" value="CsmTeTypeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端类型:0:车厘子,1:中导,2:慧翰,3:通领</label></li>
-			        <li><label><input cond="CsmNumber" value="CsmNumber"  type="checkbox" onclick='showHideCondition(this, this.value);' >车机号</label></li>
-			        <li><label><input cond="CsmTeNo" value="CsmTeNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端编号</label></li>
-			        <li><label><input cond="CsmTeModel" value="CsmTeModel"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端型号</label></li>
-			        <li><label><input cond="CsmTeCode" value="CsmTeCode"  type="checkbox" onclick='showHideCondition(this, this.value);' >厂商代码</label></li>
-			        <li><label><input cond="CsmTeLotNo" value="CsmTeLotNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端批号</label></li>
-			        <li><label><input cond="CsmTeSerial" value="CsmTeSerial"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端流水</label></li>
-			        <li><label><input cond="CsmMobile" value="CsmMobile"  type="checkbox" onclick='showHideCondition(this, this.value);' >手机号码</label></li>
-			        <li><label><input cond="CsmIccid" value="CsmIccid"  type="checkbox" onclick='showHideCondition(this, this.value);' >ICCID</label></li>
-			        <li><label><input cond="CsvAddTime" value="CsvAddTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >车辆添加时间</label></li>
+			        <li><label><input cond="csvExpId" value="csvExpId"  type="checkbox" onclick='showHideCondition(this, this.value);' >编号</label></li>
+			        <li><label><input cond="csvCarNo" value="csvCarNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >车牌号</label></li>
+			        <li><label><input cond="csvVin" value="csvVin"  type="checkbox" onclick='showHideCondition(this, this.value);' >车架号</label></li>
+			        <li><label><input cond="csvEngineNo" value="csvEngineNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >发动机号</label></li>
+			        <li><label><input cond="csvBataccuCode" value="csvBataccuCode"  type="checkbox" onclick='showHideCondition(this, this.value);' >可充电储能系统编码</label></li>
+			        <li><label><input cond="csvProdDate" value="csvProdDate"  type="checkbox" onclick='showHideCondition(this, this.value);' >出厂日期</label></li>
+			        <li><label><input cond="csvModelCodeFull" value="csvModelCodeFull"  type="checkbox" onclick='showHideCondition(this, this.value);' >车型代码</label></li>
+			        <li><label><input cond="csvModelCodeSimple" value="csvModelCodeSimple"  type="checkbox" onclick='showHideCondition(this, this.value);' >车型备案型号</label></li>
+			        <li><label><input cond="csmTeType" value="csmTeTypeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端类型:0:车厘子,1:中导,2:慧翰,3:通领</label></li>
+			        <li><label><input cond="csmNumber" value="csmNumber"  type="checkbox" onclick='showHideCondition(this, this.value);' >车机号</label></li>
+			        <li><label><input cond="csmTeNo" value="csmTeNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端编号</label></li>
+			        <li><label><input cond="csmTeModel" value="csmTeModel"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端型号</label></li>
+			        <li><label><input cond="csmTeCode" value="csmTeCode"  type="checkbox" onclick='showHideCondition(this, this.value);' >厂商代码</label></li>
+			        <li><label><input cond="csmTeLotNo" value="csmTeLotNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端批号</label></li>
+			        <li><label><input cond="csmTeSerial" value="csmTeSerial"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端流水</label></li>
+			        <li><label><input cond="csmMobile" value="csmMobile"  type="checkbox" onclick='showHideCondition(this, this.value);' >手机号码</label></li>
+			        <li><label><input cond="csmIccid" value="csmIccid"  type="checkbox" onclick='showHideCondition(this, this.value);' >ICCID</label></li>
+			        <li><label><input cond="csvAddTime" value="csvAddTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >车辆添加时间</label></li>
 					</ul>
 				</div>
 			</div>
