--- a/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_query.html
@@ -63,37 +63,37 @@
 <dl cond="csmNumber" style="display:none;">
 				<dt>车机号：</dt>
 				<dd  >
-					<input  name="csmNumberLike" placeholder="" class="form-control" >
+					<input  name="csmNumber" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmTeNo">
 				<dt>终端编号：</dt>
 				<dd  >
-					<input  name="csmTeNoEquals" placeholder="" class="form-control" >
+					<input  name="csmTeNo" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmTeModel" style="display:none;">
 				<dt>终端型号：</dt>
 				<dd  >
-					<input  name="csmTeModelEquals" placeholder="" class="form-control" >
+					<input  name="csmTeModel" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmTeCode" style="display:none;">
 				<dt>厂商代码：</dt>
 				<dd  >
-					<input  name="csmTeCodeEquals" placeholder="" class="form-control" >
+					<input  name="csmTeCode" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmTeLotNo" style="display:none;">
 				<dt>终端批号：</dt>
 				<dd  >
-					<input  name="csmTeLotNoEquals" placeholder="" class="form-control" >
+					<input  name="csmTeLotNo" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmTeSerial" style="display:none;">
 				<dt>终端流水：</dt>
 				<dd  >
-					<input  name="csmTeSerialEquals" placeholder="" class="form-control" >
+					<input  name="csmTeSerial" placeholder="" class="form-control" >
 				</dd>
 			</dl>
 <dl cond="csmMobile" style="display:none;">
