--- a/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_list2.html
@@ -74,7 +74,7 @@
         exportData: function () {
             var params = {rows: currSize, page: currPage, allReport: 1};
             params = transferParamsWithSortExport(params, "timeString");
-            var clmsCopy = $.extend(true, [], clms);
+            var clmsCopy = $.defineExtend(true, [], clms);
             params.clms = clmsCopy.splice(1, clms.length - 2);
             params.query = getFormData(this.getQueryForm());
             console.log(JSON.stringify(params));
@@ -311,7 +311,7 @@
                 if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                   option.where = getFormData(operate.getQueryForm());
                 } else {
-                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                  option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                 }
 								table.render(transferParamsWithSort(option, "gsId"));
 							},
@@ -322,7 +322,7 @@
                 if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                   option.where = getFormData(operate.getQueryForm());
                 } else {
-                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                  option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                 }
                 table.reload(tableId, transferParamsWithSort(option, "gsId"));
 							},
