--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
@@ -315,7 +315,7 @@
             if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
               option.where = getFormData(operate.getQueryForm());
             } else {
-              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+              option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
             }
             table.render(transferParamsWithSort(option, "createTime"));
           },
@@ -323,7 +323,7 @@
             if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
               option.where = getFormData(operate.getQueryForm());
             } else {
-              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+              option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
             }
             table.reload(tableId, transferParamsWithSort(params, "createTime"));
           },
