--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
@@ -31,8 +31,8 @@
 		<script src="/js/tpui-core.js?v=11111212"></script>
 		<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 		<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
-		<script src="/layui/layui.all.js?t=1510164124207"></script>
-		
+		<script src="/layui/layui.js?t=1510164124207"></script>
+
 		<script type="text/javascript">
 			$(document).ready(function () {
 		        $(".queryForm_wrapper").load("/monitor/historyState/index_query.html");
