--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyLogger/index_list2.html
@@ -1,3 +1,4 @@
+
 <div class="menubar">
     <div class="buttoncons">
 
@@ -223,7 +224,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.render(transferParamsWithSort(option, "cslId"));
                     },
@@ -234,7 +235,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.reload(tableId, transferParamsWithSort(option, "cslId"));
                     },
