--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
@@ -254,7 +254,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.render(transferParamsWithSort(option, "csrId"));
                     },
@@ -265,7 +265,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.reload(tableId, transferParamsWithSort(option, "csrId"));
                     },
