--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_list2.html
@@ -441,7 +441,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.render(transferParamsWithSort(option, "currentTime"));
                     },
@@ -449,7 +449,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.reload(tableId, transferParamsWithSort(params, "currentTime"));
                     },
