--- a/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
@@ -305,7 +305,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.render(transferParamsWithSort(option, "cssId"));
                     },
@@ -313,7 +313,7 @@
                         if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
                             option.where = getFormData(operate.getQueryForm());
                         } else {
-                            option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                            option.where = $.defineExtend(option.where, getFormData(operate.getQueryForm()));
                         }
                         table.reload(tableId, transferParamsWithSort(params, "cssId"));
                     },
