增加‘导出’权限标签

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/expVehicle/index_list2.html
@@ -12,7 +12,7 @@
                 </button>
                 <!--sctl="exportData"-->
                 <ul class="dropdown-menu">
-                    <li>
+                    <li sctl="exportData">
                         <a href="javascript:operate.exportData();">数据导出</a>
                     </li>
                 </ul>
